error_templates/java/test_files/parse_end_of_file_if/test.txt
name: "If2"
template: "Java.ParseEndOfFileError"
---
BracketMismatch.java:8: error: reached end of file while parsing
}
 ^
1 error
===
template: "Java.ParseEndOfFileError"
---
# ParseEndOfFileError
This error occurs when there is an unexpected character in the code, and ')' is expected.
```
    public static void main(String[] args) {
        if (1 > 0 {
                 ^
            System.out.println("Condition is true.");
        }
```
## Steps to fix
### Add the missing character
Ensure that the array declaration has the correct syntax by adding the missing `)`.
```diff
public class Main {
    public static void main(String[] args) {
-         if (1 > 0 {
+         if (1 > 0) {
            System.out.println("Condition is true.");
        }
```